--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>ToDo List</title>
+    <title>To-Do List</title>
   </head>
   <body>
+    <header>
+      <h1>To-Do List</h1>
+      <!-- Aggiungere frase motivazionale -->
+    </header>
+    <main>
+      <section>
+        <form>
+          <input type="text" placeholder="Cosa devi fare oggi?" />
+          <button>Aggiungi</button>
+        </form>
+      </section>
+      <section id="List"></section>
+    </main>
     <script src="assets/script/script.js"></script>
   </body>
 </html>
