--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
             name="custom-task"
             placeholder="Write your task"
             id="custom-task"
+            maxlength="20"
             required
             autofocus
           />
           <button id="add">Add</button>
         </form>
       </section>
-      <section id="list"></section>
+      <section id="list-container">
+        <h2>Your Tasks:</h2>
+        <article id="list"></article>
+      </section>
     </main>
     <script src="assets/script/script.js"></script>
   </body>
