--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <section>
         <form id="task-maker">
-          <label for="custom-task" class="block">Create your Task</label>
+          <label for="custom-task" class="block">Create your Task!</label>
           <input
             type="text"
             name="custom-task"
