--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <article id="list"></article>
       </section>
     </main>
+    <footer></footer>
     <script src="assets/script/script.js"></script>
   </body>
 </html>
