--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
     <header>
       <h1>To-Do List</h1>
-      <!-- Aggiungere frase motivazionale -->
     </header>
     <main>
       <section>
@@ -33,7 +32,7 @@
         <article id="list"></article>
       </section>
     </main>
-    <footer></footer>
+    <footer>\</footer>
     <script src="assets/script/script.js"></script>
   </body>
 </html>
