--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <article id="list"></article>
       </section>
     </main>
-    <footer>\</footer>
+    <footer></footer>
     <script src="assets/script/script.js"></script>
   </body>
 </html>
